# pythonbible

./: .codacy.yaml  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codeql-analysis.yml  python-package.yml  tests.yml
bible/: __init__.py  books.py  converter.py  errors.py  formatter.py  parser.py  regular_expressions.py  validator.py  verses.py
bible/data/: verse_ids.txt
bible/tests/: conftest.py  test_converter.py  test_parser.py  test_regular_expressions.py  test_validator.py  test_verses.py
docs/: 404.html  CNAME  conf.py  index.html  index.rst  sitemap.xml
docs/assets/css/: styles.4339f032.css  styles.ece0518b.css
docs/assets/js/: 06f51be1.22d393e2.js  06f51be1.571d280c.js  06f51be1.8761524f.js  06f51be1.97bf35b5.js  0e384e19.2ed50acf.js  0e384e19.52f11513.js  0e384e19.6d313862.js  0e384e19.814c0e17.js  121d5268.271358cc.js  121d5268.2da3c7ab.js  121d5268.35890749.js  121d5268.a5b51c39.js  15f60b5c.2a297138.js  15f60b5c.aa1b4aa6.js  15f60b5c.ad49ecaa.js  15f60b5c.f4f820db.js  17896441.12efb553.js  17896441.85b3afc5.js  17896441.ecd5839d.js  1bb555ec.95afac56.js  1bb555ec.b4987a51.js  1bb555ec.d0b4c8c1.js  1bb555ec.e566b300.js  1be78505.516919f3.js  1be78505.a2699d5f.js  1be78505.b9d4f74e.js  1f391b9e.14929016.js  1f391b9e.4efd42e4.js  1f391b9e.c3a1253c.js  2611.c378871c.js  26e138af.908d75b7.js  26e138af.93dce8af.js  26e138af.c4ccafeb.js  26e138af.fd3b11f3.js  2d94adfb.0ce9de09.js  2d94adfb.86e1b6ed.js  2d94adfb.d57ff8b8.js  2d94adfb.fb1064c3.js  3078a9ee.0235f4b6.js  3078a9ee.08bb1809.js  (+167 more)
docs/blog/: atom.xml  rss.xml
docs/blog/archive/: index.html
docs/docs/intro/: index.html
docs/docs/tags/: index.html
docs/intro/: install.rst  overview.rst  tutorial.rst
docs/markdown-page/: index.html
docs/source/: advanced_usage.rst  basic_usage.rst  book_abbreviations.rst  conf.py  index.rst  installation.rst  technical_reference.rst
docs/source/_static/: pythonbible-basic-usage.ipynb  pythonbible-book-groups.ipynb  pythonbible-multi-book-references.ipynb  pythonbible-single-chapter-books.ipynb
examples/: print_verses.py
python-bible/: converter.py  formatter.py  parser.py  regular_expressions.py  validator.py  verses.py
pythonbible/: __init__.py  book_groups.py  books.py  converter.py  counters.py  errors.py  formatter.py  fuzzy_match_util.py  normalized_reference.py  parser.py  regular_expressions.py  roman_numeral_util.py  validator.py  verses.py  versions.py
pythonbible-docs/: docusaurus.config.js  package-lock.json  package.json
pythonbible-docs/docs/: intro.md
pythonbible-docs/docs/howto-advanced/: _category_.json  book-groups.md  multi-book-references.md  single-chapter-books.md
pythonbible-docs/docs/howto-basics/: _category_.json  abbreviations.md  convert-references-to-verse-ids.md  convert-verse-ids-to-references.md  find-references.md  format-scripture-references.md  format-scripture-text.md
pythonbible-docs/docs/reference/: book-groups.md  book.md  bookgroup.md  convert-reference-to-verse-ids.md  convert-references-to-verse-ids.md  convert-verse-ids-to-references.md  count_books.md  count_chapters.md  count_verses.md  format-scripture-references.md  format-scripture-text.md  format-single-reference.md  get-book-chapter-verse.md  get-book-number.md  get-book-titles.md  get-chapter-number.md  get-max-number-of-verses.md  get-number-of-chapters.md  get-references.md  get-verse-id.md  get-verse-number.md  get-verse-text.md  invalidbookerror.md  invalidchaptererror.md  invalidverseerror.md  is-valid-book.md  is-valid-chapter.md  is-valid-reference.md  is-valid-verse-id.md  is-valid-verse.md  missingbookfileerror.md  missingversefileerror.md  normalizedreference.md  version.md
pythonbible-docs/src/pages/: index.js
pythonbible/bible/: __init__.py  bible.py  bible_parser.py  bibles.py  errors.py  json_converter.py  titles.py  versions.py
pythonbible/bible/akjv/: __init__.py  titles.py
pythonbible/bible/asv/: titles.py
pythonbible/bible/bbe/: __init__.py  titles.py
pythonbible/bible/bsb/: plain_text_readers.py  titles.py
pythonbible/bible/bwe/: __init__.py  html.py  html_notes.py  html_readers.py  plain_text.py  plain_text_notes.py  plain_text_readers.py  titles.py
pythonbible/bible/dar/: __init__.py  titles.py
pythonbible/bible/diaglot/: __init__.py  html.py  html_notes.py  html_readers.py  plain_text.py  plain_text_notes.py  plain_text_readers.py  titles.py
pythonbible/bible/dr/: __init__.py  titles.py
pythonbible/bible/etheridge/: __init__.py  html.py  html_notes.py  html_readers.py  plain_text.py  plain_text_notes.py  plain_text_readers.py  titles.py
pythonbible/bible/gb/: __init__.py  titles.py
pythonbible/bible/kjv/: titles.py
pythonbible/bible/leeser/: __init__.py  titles.py
pythonbible/bible/lont/: __init__.py  html.py  html_notes.py  html_readers.py  plain_text.py  plain_text_notes.py  plain_text_readers.py  titles.py
pythonbible/bible/mkjv1963/: __init__.py  titles.py
pythonbible/bible/mont/: __init__.py  html.py  titles.py  (+5 more)
pythonbible/counters/: book_counter.py  chapter_counter.py  verse_counter.py
tests/: __init__.py  bible_test.py  conftest.py  converter_test.py  counters_test.py  errors_test.py  formatter_test.py  fuzzy_match_test.py  json_converter_test.py  nox_test.py  parser_test.py  regular_expressions_test.py  test_converter.py  test_counters.py  test_errors.py  test_formatter.py  test_json_converter.py  test_osis_parser.py  test_parser.py  test_regular_expressions.py  test_validator.py  test_verses.py  test_versions.py  test_zzz_osis_constants.py  test_zzz_osis_parser.py  validator_test.py  verses_test.py  versions_test.py  zzz_osis_constants_test.py  zzz_osis_parser_test.py
tests/formatter/: conftest.py  formatter_test.py  version_specific_test.py
tests/parser/: conftest.py  normalized_reference_nulls_test.py  parser_test.py
(+193 files in other folders)
