[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pythonbible"
author = "Nathan Patton"
author-email = "npatton@gmail.com"
home-page = "https://docs.python.bible"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License"
]
requires = []
description-file = "README.md"
requires-python = ">=3.7"

[tool.flit.metadata.urls]
Documentation = "https://docs.python.bible"
Source = "https://github.com/avendesora/pythonbible"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=7.1.2",
    "pytest-cov >=3.0.0",
]
doc = [
    "furo >=2022.6.21",
    "Sphinx >=4.5.0",
    "sphinx-toolbox >=3.1.2",
]
dev = [
    "pre-commit >=2.20.0",
]

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"
force_single_line = true
