[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pythonbible"
author = "Nathan Patton"
author-email = "npatton@gmail.com"
home-page = "https://docs.python.bible"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License"
]
requires = []
description-file = "README.md"
requires-python = ">=3.7"

[tool.flit.metadata.urls]
Documentation = "https://docs.python.bible"
Source = "https://github.com/avendesora/pythonbible"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=7.1.2",
    "pytest-cov >=3.0.0",
]
doc = [
    "furo >=2022.6.21",
    "Sphinx >=4.5.0",
    "sphinx-toolbox >=3.1.2",
]
dev = [
    "pre-commit >=2.20.0",
]

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"
force_single_line = true

[tool.ruff]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "COM",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "T10",
    "T20",
    "W",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D205",
    "D203",
    "D213",
]
fix = true

[tool.ruff.per-file-ignores]
"docs/source/conf.py" = ["A001", "E501"]
"pythonbible/__init__.py" = ["F401"]
"pythonbible/bible/bible.py" = ["PLR0913", "FBT"]
"pythonbible/counters/book_counter.py" = ["TCH001"]
"pythonbible/counters/chapter_counter.py" = ["TCH001"]
"pythonbible/counters/verse_counter.py" = ["TCH001"]
"pythonbible/errors.py" = ["PLR0913"]
"pythonbible/formatter.py" = ["ANN401", "FBT", "PLR0911"]
"pythonbible/parser.py" = ["PLR2004"]
"pythonbible/regular_expressions.py" = ["ISC001"]
"pythonbible/roman_numeral_util.py" = ["E741"]
"tests/*.py" = ["D100", "D103", "D104", "PLR2004", "S101", "TRY301"]
"tests/conftest.py" = ["E501", "RUF"]
"tests/errors_test.py" = ["PT017"]

[tool.ruff.isort]
force-single-line = true
